<resources>
    <string name="clear">C</string>
    <string name="round_brackets">()</string>
    <string name="percent">%</string>
    <string name="division">/</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="multiplication">X</string>
    <string name="dot">.</string>
    <string name="result">=</string>

    <string name="cal_num_9">9</string>
    <string name="cal_num_8">8</string>
    <string name="cal_num_7">7</string>
    <string name="cal_num_6">6</string>
    <string name="cal_num_5">5</string>
    <string name="cal_num_4">4</string>
    <string name="cal_num_3">3</string>
    <string name="cal_num_2">2</string>
    <string name="cal_num_1">1</string>
    <string name="cal_num_0">0</string>

    <string name="close">닫기</string>
    <string name="delete_calculator_history">계산기록 삭제</string>
</resources>