<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorMainActivity">

    <View
        android:id="@+id/layoutTop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/layoutKeypad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1" />

    <TextView
        android:id="@+id/tvExpression"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="15dp"
        android:gravity="end"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="12 * 34" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="end"
        android:textColor="#aaaaaa"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/layoutKeypad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_goneMarginEnd="15dp"
        tools:text="3456" />

    <TableLayout
        android:id="@+id/layoutKeypad"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="15dp"
        android:paddingTop="21dp"
        android:paddingEnd="15dp"
        android:paddingBottom="21dp"
        android:shrinkColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutTop"
        app:layout_constraintVertical_weight="1.5">

        <TableRow android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btClear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:background="@drawable/bg_button"
                android:onClick="clearButtonClicked"
                android:stateListAnimator="@null"
                android:text="@string/clear"
                android:textColor="@color/textColor"
                android:textSize="24sp"
                tools:theme="@style/Widget.AppCompat.Button" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:background="@drawable/bg_button"
                android:clickable="false"
                android:enabled="false"
                android:stateListAnimator="@null"
                android:text="()"
                android:textColor="@color/buttonGreen"
                android:textSize="24sp"
                tools:theme="@style/Widget.AppCompat.Button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btModulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:background="@drawable/bg_button"
                android:onClick="buttonClicked"
                android:stateListAnimator="@null"
                android:text="@string/percent"
                android:textColor="@color/buttonGreen"
                android:textSize="24sp"
                tools:theme="@style/Widget.AppCompat.Button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btDivider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:background="@drawable/bg_button"
                android:onClick="buttonClicked"
                android:stateListAnimator="@null"
                android:text="@string/division"
                android:textColor="@color/buttonGreen"
                android:textSize="24sp"
                tools:theme="@style/Widget.AppCompat.Button" />

        </TableRow>

        <TableRow android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btNumber7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:background="@drawable/bg_button"
                android:onClick="buttonClicked"
                android:stateListAnimator="@null"
                android:text="@string/cal_num_7"
                android:textColor="@color/textColor"
                android:textSize="24sp"
                tools:theme="@style/Widget.AppCompat.Button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btNumber8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:background="@drawable/bg_button"
                android:onClick="buttonClicked"
                android:stateListAnimator="@null"
                android:text="@string/cal_num_8"
                android:textColor="@color/textColor"
                android:textSize="24sp"
                tools:theme="@style/Widget.AppCompat.Button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btNumber9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:background="@drawable/bg_button"
                android:onClick="buttonClicked"
                android:stateListAnimator="@null"
                android:text="@string/cal_num_8"
                android:textColor="@color/textColor"
                android:textSize="24sp"
                tools:theme="@style/Widget.AppCompat.Button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btMulti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:background="@drawable/bg_button"
                android:onClick="buttonClicked"
                android:stateListAnimator="@null"
                android:text="@string/multiplication"
                android:textColor="@color/buttonGreen"
                android:textSize="24sp"
                tools:theme="@style/Widget.AppCompat.Button" />

        </TableRow>

        <TableRow android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btNumber6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:background="@drawable/bg_button"
                android:onClick="buttonClicked"
                android:stateListAnimator="@null"
                android:text="@string/cal_num_6"
                android:textColor="@color/textColor"
                android:textSize="24sp"
                tools:theme="@style/Widget.AppCompat.Button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btNumber5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:background="@drawable/bg_button"
                android:onClick="buttonClicked"
                android:stateListAnimator="@null"
                android:text="@string/cal_num_5"
                android:textColor="@color/textColor"
                android:textSize="24sp"
                tools:theme="@style/Widget.AppCompat.Button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btNumber4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:background="@drawable/bg_button"
                android:onClick="buttonClicked"
                android:stateListAnimator="@null"
                android:text="@string/cal_num_4"
                android:textColor="@color/textColor"
                android:textSize="24sp"
                tools:theme="@style/Widget.AppCompat.Button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btMinus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:background="@drawable/bg_button"
                android:onClick="buttonClicked"
                android:stateListAnimator="@null"
                android:text="@string/minus"
                android:textColor="@color/buttonGreen"
                android:textSize="24sp"
                tools:theme="@style/Widget.AppCompat.Button" />

        </TableRow>

        <TableRow android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btNumber3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:background="@drawable/bg_button"
                android:onClick="buttonClicked"
                android:stateListAnimator="@null"
                android:text="@string/cal_num_3"
                android:textColor="@color/textColor"
                android:textSize="24sp"
                tools:theme="@style/Widget.AppCompat.Button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btNumber2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:background="@drawable/bg_button"
                android:onClick="buttonClicked"
                android:stateListAnimator="@null"
                android:text="@string/cal_num_2"
                android:textColor="@color/textColor"
                android:textSize="24sp"
                tools:theme="@style/Widget.AppCompat.Button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btNumber1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:background="@drawable/bg_button"
                android:onClick="buttonClicked"
                android:stateListAnimator="@null"
                android:text="@string/cal_num_1"
                android:textColor="@color/textColor"
                android:textSize="24sp"
                tools:theme="@style/Widget.AppCompat.Button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btPlus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:background="@drawable/bg_button"
                android:onClick="buttonClicked"
                android:stateListAnimator="@null"
                android:text="@string/plus"
                android:textColor="@color/buttonGreen"
                android:textSize="24sp"
                tools:theme="@style/Widget.AppCompat.Button" />

        </TableRow>

        <TableRow android:layout_weight="1">

            <ImageButton
                android:id="@+id/btHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:background="@drawable/bg_button"
                android:onClick="historyButtonClicked"
                android:padding="12dp"
                android:src="@drawable/ic_baseline_access_time_24"
                android:stateListAnimator="@null"
                android:textColor="@color/textColor"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btNumber0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:background="@drawable/bg_button"
                android:onClick="buttonClicked"
                android:stateListAnimator="@null"
                android:text="@string/cal_num_0"
                android:textColor="@color/textColor"
                android:textSize="24sp"
                tools:theme="@style/Widget.AppCompat.Button" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:background="@drawable/bg_button"
                android:clickable="false"
                android:enabled="false"
                android:onClick="buttonClicked"
                android:stateListAnimator="@null"
                android:text="@string/dot"
                android:textColor="@color/textColor"
                android:textSize="24sp"
                tools:theme="@style/Widget.AppCompat.Button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:background="@drawable/bg_button_green"
                android:onClick="resultButtonClicked"
                android:stateListAnimator="@null"
                android:text="@string/result"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:theme="@style/Widget.AppCompat.Button" />

        </TableRow>

    </TableLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHistory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/layoutKeypad"
        tools:visibility="visible">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btClose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:onClick="closeHistoryButtonClicked"
            android:stateListAnimator="@null"
            android:text="@string/close"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toTopOf="@id/btHistoryClear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btClose">

            <LinearLayout
                android:id="@+id/linearLayoutHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btHistoryClear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="47dp"
            android:layout_marginEnd="47dp"
            android:layout_marginBottom="38dp"
            android:background="@drawable/bg_button_green"
            android:onClick="historyClearButtonClicked"
            android:stateListAnimator="@null"
            android:text="@string/delete_calculator_history"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>